--- a/src/App.css
+++ b/src/App.css
@@ -9,20 +9,16 @@ html {
 }
 
 [data-framer-theme="light"] {
-	--color-bg-secondary: var(--framer-color-bg-tertiary);
-	--color-bg-tertiary: var(--framer-color-bg-secondary);
 	--color-segmented-control: #fff;
 	--color-divider-secondary: #e6e6e6;
-	--color-bg-modal: #fff;
+	--color-bg-modal: var(--framer-color-bg);
 	--color-error: #e25;
 }
 
 [data-framer-theme="dark"] {
-	--color-bg-secondary: #222222; /*var(--framer-color-bg-secondary); */
-	--color-bg-tertiary: var(--framer-color-bg-tertiary);
 	--color-segmented-control: #555;
 	--color-divider-secondary: #444;
-	--color-bg-modal: #181818;
+	--color-bg-modal: var(--framer-color-bg-tertiary);
 	--color-error: #e7315e;
 }
 
@@ -32,7 +28,7 @@ html {
 
 input,
 select {
-	@apply bg-secondary;
+	@apply bg-tertiary;
 }
 
 select {
